# deer-ues-tool

./: NormUnits.csv  README.md  UIgooey.py  postprocessing.py  pyproject.toml  script_input.py  setup.py  test1.py
Commercial/: Bldg_Wts.sql  Com.sql  Com_Wt.sql  NormUnitLookUp.sql  Permutations.sql  UEC.sql  UES.sql  UsePerUnit.sql
Example/: README.md  energysavings_SWHC012.csv  simdata_SWHC012.csv
LookupTables/: NormUnits.csv
Residential/: Bldg_Wts.sql  NormUnit.sql  Permutations.sql  Res.sql  Story_Wts.sql  Totalized.sql  UEC.sql  UES.sql
SQL Files/: Permutations.sql  UsePerUnitMeas.sql  UsePerUnitStd.sql
UI/: PostProcessingUI.py  UIgooey.py  UIgooey1.py  UIgooey2.py  UIscript.py
deer_ues_tool/: UIgooey.py  __init__.py  postprocessing.py
deer_ues_tool/commercial/: Bldg_Wts.sql  Permutations.sql  UES.sql
deer_ues_tool/lookup/: NumStor.csv
deer_ues_tool/residential/: Res.sql
test/: MeasDef_SWHC012.csv  energysavings_SWHC012.csv  simdata_SWHC012.csv  test_ignore_gooey.cmd
